Updated pool card alignment and fixed farm and unfarm slider.

--- a/src/assets/scss/custom.scss
+++ b/src/assets/scss/custom.scss
@@ -1166,10 +1166,16 @@ button {
 
       &::-webkit-placeholder {
         color: $text-color-dark2;
+         .dark-mode &{
+          color: white;
+        }
       }
 
       &::placeholder {
         color: $text-color-dark2;
+        .dark-mode &{
+          color: white;
+        }
       }
 
       &::-webkit-inner-spin-button {
@@ -1330,6 +1336,12 @@ button {
       color: $text-color-label-dark;
     }
   }
+     &::placeholder {
+        color: $text-color-dark2;
+        .dark-mode &{
+          color: white;
+        }
+      }
 }
 
 .card-bottom-details {
